WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38110
[Qt] QScriptStringPrivate c'tor problem
https://bugs.webkit.org/show_bug.cgi?id=38110
Summary
[Qt] QScriptStringPrivate c'tor problem
Jędrzej Nowacki
Reported
2010-04-26 04:00:53 PDT
The c'tor shouldn't call JSStringRetain function. QScriptConverter implicitly pass a JSStringref ownership.
Attachments
fix v1
(1.26 KB, patch)
2010-04-26 04:07 PDT
,
Jędrzej Nowacki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jędrzej Nowacki
Comment 1
2010-04-26 04:07:58 PDT
Created
attachment 54271
[details]
fix v1 Fix the memory leak.
WebKit Commit Bot
Comment 2
2010-04-26 05:28:24 PDT
Comment on
attachment 54271
[details]
fix v1 Clearing flags on attachment: 54271 Committed
r58248
: <
http://trac.webkit.org/changeset/58248
>
WebKit Commit Bot
Comment 3
2010-04-26 05:28:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug