2010-04-26  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        Fix a memory leak in the QScriptString.

        QScriptStringPrivate's constructor shouldn't call JSStringRetain as
        QScriptConverter implicitly pass a JSStringRef ownership.

        [Qt] QScriptStringPrivate c'tor problem
        https://bugs.webkit.org/show_bug.cgi?id=38110

        * qt/api/qscriptstring_p.h:
        (QScriptStringPrivate::QScriptStringPrivate):

Canonical link: https://commits.webkit.org/49528@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58248 268f45cc-cd09-0410-ab3c-d52691b4dbfc